[gd_scene load_steps=6 format=2]

[ext_resource path="res://prefabs/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/pipe_emitter.gd" type="Script" id=2]
[ext_resource path="res://scripts/cloud_emitter.gd" type="Script" id=3]
[ext_resource path="res://gui/in_game_gui.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/controller.gd" type="Script" id=5]

[node name="main" type="Node2D"]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 163.167, 161.544 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
collision_layer = 1
collision_mask = 6
gravity = 10
flap_speed = -150

[node name="spawn_container" type="Node2D" parent="."]

[node name="pipe_emitter" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 1350, 360 )
script = ExtResource( 2 )
speed = 200
delay = 2.5

[node name="pe_timer" type="Timer" parent="pipe_emitter"]

[node name="cloud_emitter" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 1400, 360 )
script = ExtResource( 3 )

[node name="ce_timer" type="Timer" parent="cloud_emitter"]

[node name="ui" type="Node2D" parent="."]
editor/display_folded = true
z_index = 4

[node name="gui" parent="ui" instance=ExtResource( 4 )]

[node name="controller" type="Node2D" parent="."]
position = Vector2( 61.2168, 1.36037 )
script = ExtResource( 5 )

[connection signal="player_death" from="player" to="controller" method="_on_player_death"]
[connection signal="timeout" from="pipe_emitter/pe_timer" to="pipe_emitter" method="_on_pe_timer_timeout"]
[connection signal="timeout" from="cloud_emitter/ce_timer" to="cloud_emitter" method="_on_ce_timer_timeout"]
